# Red-DiscordBot

./: .gitignore  .travis.yml  CONTRIBUTING.md  Makefile  make.bat  pyproject.toml  red.py  setup.cfg
changelog.d/: 2952.enhance.rst  2952.feature.rst
cogs/: channellogger.py  cleverbot.py  economy.py  errorlogs.py  general.py  gsheets.py  massdm.py  mod.py  modlog.py  owner.py  punish.py  r6stats.py  reactkarma.py  register.py  spoiler.py  streams.py  strike.py  trivia.py  welcome.py
cogs/utils/: chat_formatting.py  checks.py  settings.py
data/trivia/: cars.txt  pokemon.txt
docs/: conf.py  framework_config.rst  framework_exceptions.rst  framework_i18n.rst  framework_utils.rst  index.rst
redbot/: __main__.py  setup.py
redbot/cogs/admin/: admin.py  announcer.py  converters.py
redbot/cogs/alias/: alias.py
redbot/cogs/audio/: audio.py
redbot/cogs/bank/: bank.py
redbot/cogs/cleanup/: cleanup.py  converters.py
redbot/cogs/customcom/: customcom.py
redbot/cogs/downloader/: checks.py  converters.py  downloader.py  repo_manager.py
redbot/cogs/economy/: economy.py
redbot/cogs/filter/: filter.py
redbot/cogs/general/: general.py
redbot/cogs/image/: image.py
redbot/cogs/mod/: converters.py  events.py  kickban.py  mod.py  movetocore.py  mutes.py  names.py  settings.py  slowmode.py
redbot/cogs/modlog/: modlog.py
redbot/cogs/permissions/: converters.py  permissions.py
redbot/cogs/reports/: reports.py
redbot/cogs/streams/: streams.py  streamtypes.py
redbot/cogs/trivia/: session.py  trivia.py
redbot/cogs/warnings/: helpers.py  warnings.py
redbot/core/: bank.py  bot.py  cog_manager.py  config.py  core_commands.py  dev_commands.py  errors.py  events.py  i18n.py  json_io.py  modlog.py
redbot/core/commands/: commands.py  converter.py  help.py
redbot/core/config/: __init__.py  array.py  config.py  group.py  identifier_data.py  utils.py  value.py
redbot/core/config/drivers/: __init__.py  base.py  json.py  mongo.py
redbot/core/config/drivers/postgres/: ddl.sql  postgres.py
redbot/core/drivers/: base.py  json.py  mongo.py  postgres_functions.sql  red_base.py  red_postgres.py
redbot/core/utils/: __init__.py  chat_formatting.py  misc.py
redbot/pytest/: core.py
tests/: conftest.py
tests/core/: test_config.py
tools/: compile_mofiles.py  dev-requirements.txt  primary_deps.ini
